src/main/java/com/example/socialapi/common/exception/errors/UnauthorizedException.java
package com.example.socialapi.common.exception.errors;

public class UnauthorizedException extends RuntimeException{
    public UnauthorizedException(String message) {
        super(message);
    }
}
